# user_auth

./: .Makefile.swp  .coveragerc  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Dockerfile.dev  MANIFEST.in  Makefile  README.md  docker-compose-dev.yaml  mkdocs.yml  pyproject.toml  requirements.txt  settings.toml  setup.py
.github/: rename_project.sh
docs/: design.md  index.md
docs/OAuth2.0/: authorization_code.md
migrations/: env.py
tests/: conftest.py  test_app.py
user_auth/: app.py  cli.py  config.py  db.py  security.py
user_auth/models/: __init__.py  content.py  login.py  user.py
user_auth/routes/: __init__.py
user_auth/server/: token_operation.py
